--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Understanding Typescripts</title>
     <script src="dist/app.js" defer></script>
-    <script src="dist/analytics.js" defer></script>
+    <!--script src="dist/analytics.js" defer></script-->
 </head>
 <body>
-    <button>Click here</button>
+    <!--button>Click here</button -->
 </body>
 </html>
